Fix CO edit error 500 and add CO title display
- Fixed ChangeOrderForm field mapping (billing_hourly_rate -> labor_rate_override)
- Fixed material_markup_pct -> material_markup_percent mapping
- Removed alias fields from Meta.fields (they are properties, not model fields)
- Added co_title display in changeorder_board.html table
- Added co_title display in changeorder_detail_standalone.html header

--- a/core/templates/core/changeorder_board.html
+++ b/core/templates/core/changeorder_board.html
@@ -566,6 +566,9 @@
                     <!-- Project / Description -->
                     <td>
                         <div class="co-cell-project-name">{{ co.project.name|truncatewords:8 }}</div>
+                        {% if co.co_title %}
+                        <div class="co-cell-title" style="font-weight: 600; color: #334155; font-size: 13px;">{{ co.co_title|truncatewords:6 }}</div>
+                        {% endif %}
                         <div class="co-cell-description">{{ co.description|truncatewords:12 }}</div>
                     </td>
                     
